2000-07-05  Eskil Heyn Olsen  <eskil@eazel.com>

	* gconf-config.in:
	adds output of oaf-config, since gconf uses oaf.

2000-07-05  Eskikl Heyn Olsen  <eskil@eazel.com>

	* gconf.spec.in:
	Fixed som typos.

2000-06-22  Dan Winship  <danw@helixcode.com>

	* wrappers/gtk/gconf-client.c (gconf_client_set_pair): Pass both
	car and cdr to gconf_set_pair rather than passing car twice. Oops.

2000-06-12  Eskil Heyn Olsen  <eskil@eazel.com>

	* gconf.spec.in: Removed the .a libs from the base package, but
	added them to -devel.

2000-06-11  Eskil Heyn Olsen  <eskil@eazel.com>

	* gconf.spec.in: Req oaf >= 0.3.0

2000-06-11  Eskil Heyn Olsen  <eskil@eazel.com>

	* gconf.spec.in: Added a .spec file.
	* configure.in: Generate gconf.spec.
	* Makefile.am: Added gconf.spec.in and gconf.spec to the
	EXTRA_DIST.	

2000-06-07  Pavel Cisler  <pavel@eazel.com>

	* wrappers/gtk/gconf-client.c: (gconf_client_get_string):
	Fix a storage leak -- a g_strdup and an string ownership
	swapping optimization were working against each other.
	Removed the g_strdup that is not needed.

2000-06-04	Mathieu Lacage	<mathieu@gnome.org>

	* gconf-config.in: add gtk-config --cflags and --libs
	output to the gconf-gtk --cflags and --libs output.

2000-06-01  Havoc Pennington  <hp@pobox.com>

	* gconf/gconf.c (lookup_engine): check whether the hash is NULL
	before looking up the engine.

2000-06-01  Havoc Pennington  <hp@pobox.com>

	* gconf/gconf.c (gconf_engine_new): If there's an existing engine
	for a given context, return that engine instead of creating a new
	one.
	(gconf_engine_new_from_address): ditto

	* wrappers/gtk/gconf-client.c (gconf_client_finalize): remove
	client from client registration table
	(gconf_client_new): register newly-created client in hash from
	engines to clients; return an existing client if there's already
	a client for the default engine
	(gconf_client_new_with_engine): register newly-created client,
	and try to return existing client.
