@@ -1,3 +1,8 @@
+2000-07-11  Havoc Pennington  <hp@redhat.com>
+
+	* Makefile.am: spew messages about needing to create
+	prefix/etc/gconf/path, should make things easier for users.
+
 2000-07-05  Eskil Heyn Olsen  <eskil@eazel.com>
 
 	* gconf-config.in:
